[project]
name = 'refcycle'
version = '0.3.0'
description = 'Find and visualise reference cycles between Python objects'
readme = 'README.rst'
requires-python = '>=3.7'
license = { file = 'LICENSE' }
authors = [{ name = 'Mark Dickinson', email = 'dickinsm@gmail.com' }]
keywords = ["cycle", "cyclic", "debugging", "garbage", "graph", "reference"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Debuggers",
]

[project.urls]
Homepage = "https://github.com/mdickinson/refcycle"
Documentation = "https://refcycle.readthedocs.io/"

[tool.isort]
profile = 'black'
order_by_type = false
