[build-system]
requires = ['setuptools', 'setuptools-scm[toml]', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'refcycle'
description = 'Find and visualise reference cycles between Python objects'
readme = 'README.rst'
requires-python = '>=3.7'
license = { file = 'LICENSE' }
authors = [{ name = 'Mark Dickinson', email = 'dickinsm@gmail.com' }]
keywords = ["cycle", "cyclic", "debugging", "garbage", "graph", "reference"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Debuggers",
]
dynamic = ['version']

[project.urls]
Homepage = "https://github.com/mdickinson/refcycle"
Documentation = "https://refcycle.readthedocs.io/"

[tool.isort]
profile = 'black'
order_by_type = false

[tool.setuptools_scm]
version_scheme = 'release-branch-semver'
